--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --experimental-https --experimental-https-key ./certs/key.pem --experimental-https-cert ./certs/cert.pem",
-    "build": "esbuild lib/model-worker.js --bundle --platform=browser --outfile=public/model-worker.bundle.js && next build",
+    "dev": "next dev --webpack --experimental-https --experimental-https-key ./certs/key.pem --experimental-https-cert ./certs/cert.pem",
+    "build": "esbuild lib/model-worker.js --bundle --platform=browser --format=esm --outfile=public/model-worker.bundle.js && next build --webpack",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@huggingface/transformers": "^4.0.0-next.4",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
